<resources>
    <string name="app_name">MarkIt</string>
    <string name="college_name">MarkIt</string>
    <string name="buttonClass">Classroom</string>
    <string name="buttonNote">Note</string>
    <string name="buttonReminder">Reminder</string>
    <string name="buttonOther">Other</string>
    <string name="sectionHint">Class Name</string>
    <string name="courseHint">Course Name</string>
    <string name="codeHint">Course Code</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="addClassTitle">New Class</string>
    <string name="addStudent">Add New</string>
    <string name="updateStudent">UPDATE EXISTING</string>
    <string name="classActivityTitle">CLASSROOM</string>
    <string name="attendanceActivityTitle">Attendance TODAY</string>
    <string name="changeDate">Change Date</string>
    <string name="save">SAVE</string>
    <string name="saveMessage">If u leave any attendance unchecked it will count as Absent</string>
    <string name="attendanceNotTakenStatus">Take Attendance</string>
    <string name="noStudentStatus">Add Student</string>
    <string name="emptyMessage">Field can\'t be empty</string>
    <string name="print">Print</string>
    <string name="title_activity_starting">StartingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="noteTab">Note</string>
    <string name="classTab">Classroom</string>
    <string name="reminderTab">Reminder</string>
    <string name="new_class">New Class</string>
    <string name="empty_class">✓ create classes  ✓ add students\n✓ take attendance  ✓ print attendance pdf</string>
</resources>
