<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="12dp">

    <RelativeLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            >

            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:text="@string/addClassTitle"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/sectionHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tied1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="12" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/courseHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tied2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="16" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:visibility="gone"
                android:layout_marginTop="16dp"
                android:id="@+id/til3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/codeHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tied3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="16" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@+id/lay1"
            android:weightSum="2">

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:backgroundTint="@color/seed"
                android:text="@string/cancel"
                android:textColor="@color/buttonText" />
            <TextView
                android:layout_width="16dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1"
                android:background="@drawable/buttons"
                android:backgroundTint="@color/seed"
                android:text="@string/add"
                android:textColor="@color/buttonText" />
        </LinearLayout>


    </RelativeLayout>
</androidx.cardview.widget.CardView>