<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".classes.ClassActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/seed"
        app:title="@string/college_name"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        app:titleTextColor="@color/white" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerClass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarMain"
        tools:listitem="@layout/class_item" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/empty_class"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/seed"
        android:contentDescription="fabClass"
        android:text="@string/new_class"
        android:textColor="@color/design_default_color_background"
        app:icon="@drawable/ic_add"
        app:iconTint="@color/design_default_color_background" />

</RelativeLayout>